03-containers/k8s-helm-demo/manifests/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: nodejs-demo
  labels:
    name: nodejs-demo
    environment: development
