03-containers/k8s-helm-demo/manifests/postgres-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: postgres-service
  namespace: nodejs-demo
  labels:
    app: postgres
spec:
  type: ClusterIP
  selector:
    app: postgres  # Routes traffic to pods with this label
  ports:
  - port: 5432
    targetPort: 5432
    protocol: TCP
