03-containers/k8s-helm-demo/manifests/redis-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: redis-service
  namespace: nodejs-demo
  labels:
    app: redis
spec:
  type: ClusterIP
  selector:
    app: redis
  ports:
  - port: 6379
    targetPort: 6379
    protocol: TCP
